; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_rtc.c_rtc_cmos_read.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/x86/kernel/extr_rtc.c_rtc_cmos_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local zeroext i8 @rtc_cmos_read(i8 zeroext %0) #0 {
  %2 = alloca i8, align 1
  %3 = alloca i8, align 1
  store i8 %0, i8* %2, align 1
  %4 = load i8, i8* %2, align 1
  %5 = call i32 @lock_cmos_prefix(i8 zeroext %4)
  %6 = load i8, i8* %2, align 1
  %7 = call i32 @RTC_PORT(i32 0)
  %8 = call i32 @outb(i8 zeroext %6, i32 %7)
  %9 = call i32 @RTC_PORT(i32 1)
  %10 = call zeroext i8 @inb(i32 %9)
  store i8 %10, i8* %3, align 1
  %11 = load i8, i8* %2, align 1
  %12 = call i32 @lock_cmos_suffix(i8 zeroext %11)
  %13 = load i8, i8* %3, align 1
  ret i8 %13
}

declare dso_local i32 @lock_cmos_prefix(i8 zeroext) #1

declare dso_local i32 @outb(i8 zeroext, i32) #1

declare dso_local i32 @RTC_PORT(i32) #1

declare dso_local zeroext i8 @inb(i32) #1

declare dso_local i32 @lock_cmos_suffix(i8 zeroext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
